syntax = "proto3";

package portfolio.v1;

import "portfolio/v1/service.proto";

service GuestService {
  rpc GetGuestProfile(GetGuestProfileRequest) returns (GetGuestProfileResponse);
  rpc SaveGuestProfile(SaveGuestProfileRequest) returns (SaveGuestProfileResponse);
  rpc GetUploadUrl(GetUploadUrlRequest) returns (GetUploadUrlResponse);
  rpc GetGuestsByIds(GetGuestsByIdsRequest) returns (GetGuestsByIdsResponse);
  rpc GetGuestsByUserIds(GetGuestsByUserIdsRequest) returns (GetGuestsByUserIdsResponse);
}

message GuestProfile {
  string user_id = 1;
  string name = 2;
  string avatar_path = 3;
  string avatar_url = 4;  // Read-only, download URL
  string tagline = 5;     // Short introduction (max 100 chars)
  string bio = 6;         // Self introduction (max 1000 chars)
}

message GetGuestProfileRequest {}  // user_id is obtained from authentication

message GetGuestProfileResponse {
  GuestProfile profile = 1;
}

message SaveGuestProfileRequest {
  string name = 1;
  string avatar_path = 2;
  string tagline = 3;     // Short introduction (max 100 chars)
  string bio = 4;         // Self introduction (max 1000 chars)
}

message SaveGuestProfileResponse {
  GuestProfile profile = 1;
}

// === Batch Queries (for cross-slice communication) ===

message GetGuestsByIdsRequest {
  repeated string guest_ids = 1;
}

message GetGuestsByIdsResponse {
  // Map of guest_id to GuestProfile
  map<string, GuestProfile> guests = 1;
}

message GetGuestsByUserIdsRequest {
  repeated string user_ids = 1;
}

message GetGuestsByUserIdsResponse {
  // Map of user_id to GuestProfile
  map<string, GuestProfile> guests = 1;
}
