syntax = "proto3";

package post.v1;

service CommentService {
  rpc AddComment(AddCommentRequest) returns (AddCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
  rpc ListComments(ListCommentsRequest) returns (ListCommentsResponse);
  rpc ListReplies(ListRepliesRequest) returns (ListRepliesResponse);
}

message CommentMedia {
  string id = 1;
  string media_type = 2; // "image" or "video"
  string url = 3;
  string thumbnail_url = 4;
  string media_id = 5; // Reference to media__files.id (required for input)
}

message CommentAuthor {
  string user_id = 1;
  string name = 2;
  string image_url = 3;
  string user_type = 4; // "guest" or "cast"
}

message Comment {
  string id = 1;
  string post_id = 2;
  string parent_id = 3; // empty if top-level comment
  string user_id = 4;   // Guest or Cast user ID
  string content = 5;
  string created_at = 6; // ISO8601
  CommentAuthor author = 7;
  repeated CommentMedia media = 8;
  int32 replies_count = 9;
}

message AddCommentRequest {
  string post_id = 1;
  string content = 2;
  string parent_id = 3; // optional, for replies
  repeated CommentMedia media = 4; // max 3
}

message AddCommentResponse {
  Comment comment = 1;
  int32 comments_count = 2; // updated post comments count
}

message DeleteCommentRequest {
  string comment_id = 1;
}

message DeleteCommentResponse {
  int32 comments_count = 1;
}

message ListCommentsRequest {
  string post_id = 1;
  int32 limit = 2;   // default: 20, max: 50
  string cursor = 3; // optional, for pagination
}

message ListCommentsResponse {
  repeated Comment comments = 1; // top-level comments only
  string next_cursor = 2;
  bool has_more = 3;
}

message ListRepliesRequest {
  string comment_id = 1; // parent comment id
  int32 limit = 2;   // default: 20, max: 50
  string cursor = 3; // optional, for pagination
}

message ListRepliesResponse {
  repeated Comment replies = 1;
  string next_cursor = 2;
  bool has_more = 3;
}
